# MLP-cpp

./: CMakeLists.txt  LICENSE  README.md
include/mlp/: data_loader.hpp  function.hpp  mlp.hpp
src/: data_loader.cpp  main.cpp
